--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   stream_transform: ^2.0.0
   bloc_event_transformers: ^1.0.1
   beamer: ^1.5.3
+  percent_indicator: ^4.2.2
+  intl: ^0.17.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
