--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   percent_indicator: ^4.2.2
   intl: ^0.17.0
   flutter_rating_bar: ^4.0.1
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
