--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.17.0
   flutter_rating_bar: ^4.0.1
   cached_network_image: ^3.2.1
+  youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
   flutter_test:
