--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   cached_network_image: ^3.2.1
   youtube_player_flutter: ^8.1.0
+  shimmer: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
